<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_match_basic_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp">

        <ImageView
            android:id="@+id/hero_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:id="@+id/layout_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_duration" />

            <TextView
                android:id="@+id/value_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="45:12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_game_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hero_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Clockwerk" />

            <TextView
                android:id="@+id/is_game_win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_lose" />
        </LinearLayout>

        <Button
            android:id="@+id/button_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_more_info" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layout_match_basic_info"
        android:background="@android:color/darker_gray" />


</RelativeLayout>